# astrognome

./: .gitignore  .gitmodules  ChangeLog  HACKING.md  Makefile.am  README.md  TODO  TODO.md  TODO.org  astrognome.appdata.xml.in  astrognome.doap  autogen.sh  configure.ac  graphics-help-from-irc.txt
data/: Makefile.am  astrognome.desktop.in.in  chart.css  chart.xsl  eu.polonkai.gergely.astrognome.gschema.xml  sign_aquarius.xml  sign_leo.xml  sign_libra.xml  sign_pisces.xml  sign_scorpio.xml  sign_taurus.xml
data/examples/: saved-chart.agc
data/geonames/: Makefile.am  geonames_process.awk  geonames_process.pl
data/icons/: Makefile.am
docs/: astrognome-uncrustify.cfg
docs/reference/astrognome/: Makefile.am
docs/reference/swe-glib/: Makefile.am
help/: Makefile.am
help/C/: chart-parts.page  display-themes.page  getting-started.page  image-export.page  index.page  introduction.page  keyboard-navigation.page  preferences.page  your-first-chart.page
help/hu/: hu.po
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  hu.po
src/: Makefile.am  ag-app.c  ag-app.h  ag-chart-edit.c  ag-chart-edit.h  ag-chart-renderer.c  ag-chart-renderer.h  ag-chart.c  ag-chart.h  ag-db.c  ag-db.h  ag-display-theme.c  ag-display-theme.h  ag-enumtypes.c.template  ag-enumtypes.h.template  ag-header-bar.c  ag-header-bar.h  ag-header-bar.vala  ag-icon-view.c  ag-icon-view.h  ag-preferences.c  ag-preferences.h  ag-settings.c  ag-settings.h  ag-window.c  ag-window.h  ag-window.ui  ag.gresource.xml  astrognome.c  astrognome.h  astrognome.ui  calculate.c  calculate.h  gen-dir-locals-el.sh  gradix.c  gradix.ui  placidus.h  widgets.vala
src/resources/default-icons/: planet-asbolus.xml  planet-ceres.xml  planet-chariklo.xml  planet-chiron.xml  planet-juno.xml  planet-jupiter.xml  planet-mars.xml  planet-mercury.xml  planet-moon-apogee.xml  planet-moon-node.xml  planet-moon.xml  planet-neptune.xml  planet-nessus.xml  planet-pallas.xml  planet-pholus.xml  planet-pluto.xml  planet-saturn.xml  planet-sun.xml  planet-uranus.xml  planet-venus.xml  planet-vesta.xml  point-vertex.xml  sign-aquarius.xml  sign-aries.xml  sign-cancer.xml  sign-capricorn.xml  sign-gemini.xml  sign-sagittarius.xml  sign-virgo.xml
src/resources/gtk/: menus.ui
src/resources/ui/: ag-chart-edit.ui  ag-header-bar.ui  ag-preferences.ui  ag-window.ui  astrognome.ui  chart-default.css  chart-default.xsl
swe/: README
swe-glib/src/: Makefile.am  enumtypes.c.template  enumtypes.h.template  gswe-moment.c  gswe-moment.h  gswe-timestamp.c  gswe-timestamp.h  gswe-types.h  swe-glib-private.h  swe-glib.c  swe-glib.h
swe-glib/swe/: README
swe-glib/swe/src/: Makefile.am  seorbel.txt  swecl.c  swedll.h  swejpl.c  swemmoon.c  swemplan.c  swenut2000a.h  sweodef.h  swepcalc.h  sweph.c  sweph.h  swephexp.h  swephlib.c  swephlib.h
swe/doc/: swephprg.htm  swisseph.htm
swe/src/: Makefile.am  README  swedate.c  swedate.h  swedll.h  swehel.c  swehouse.c  swehouse.h  swejpl.h  swemptab.c  swepcalc.c  swepdate.c  swetest.c
