@YELP_HELP_RULES@

NULL =

HELP_ID = astrognome

HELP_MEDIA = $(NULL)

HELP_FILES = \
	index.page               \
	introduction.page        \
	display-themes.page      \
	getting-started.page     \
	image-export.page        \
	keyboard-navigation.page \
	preferences.page         \
	your-first-chart.page    \
	chart-parts.page         \
	legal.xml                \
	$(NULL)

HELP_LINGUAS = hu

